<!--
pacote direcionado a strings que é reutilizado para o app
-->

<resources>
    <string name="app_name">QuizApp</string>
    <string name="question_goiania">Goiânia é a capital de Goiás.</string>
    <string name="question_araguaia">O Rio Araguaia é famoso por suas praias de água doce.</string>
    <string name="question_caldas">Caldas Novas forma a maior estância hidrotermal do mundo.</string>
    <string name="question_capital">A cidade de Goiânia sempre foi a capital de Goiás.</string>
    <string name="question_pequi">Ao comer o pequi, você deve morder o caroço com bastante força.</string>
    <string name="question_chapada">A Chapada dos Veadeiros é reconhecida como Patrimônio Natural da Humanidade.</string>
    <string name="true_button">Verdadeiro</string>
    <string name="false_button">Falso</string>
    <string name="correct_toast">Correto!</string>
    <string name="incorrect_toast">Incorreto!</string>
    <string name="next_button">Próximo</string>

    <string name="warning_text">Tem certeza?</string>
    <string name="show_answer_button">Mostrar resposta.</string>
    <string name="cheat_button">trapacear!</string>
    <string name="judgment_toast">Isso é errado.</string>
    <string name="answer">Answer</string>
</resources>