<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cheat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/warning_text"
        android:background="@drawable/bg_text_backgorund"
        android:backgroundTint="@color/red_warning"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_text_backgorund"
        android:backgroundTint="@color/black"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/answer"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show_answer_button"
        android:backgroundTint="@color/black"
        tools:ignore="MissingConstraints" />

</LinearLayout>